--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-webapp_travel_agency-D7DAEE82-31F6-463F-B7B3-D7EC6B2D785A;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=db-travel-agency;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
